2010-02-19	Chris Johns <chrisj@rtems.org>

	* libblock/src/diskdevs.c: Create the devices as block devices.

	* libmisc/shell/main_debugrfs.c, libmisc/shell/main_mkrfs.c,
	libmisc/shell/main_mount_rfs.c: New.

	* libmisc/shell/main_msdosfmt.c: Change the command to mkdos and
	alias the old name.

	* libmisc/shell/shellconfig.h, libmisc/Makefile.am: Add RFS
	support.

	* libfs/src/rfs/rtems-rfs-shell.c,
	libfs/src/rfs/rtems-rfs-shell.h: Move the format command code into
	the shell file.
	
2010-02-18	Chris Johns <chrisj@rtems.org>

	* libfs/src/rfs/rtems-rfs-bitmaps.c,
	libfs/src/rfs/rtems-rfs-bitmaps.h,
	libfs/src/rfs/rtems-rfs-bitmaps-ut.c,
	libfs/src/rfs/rtems-rfs-block.c, libfs/src/rfs/rtems-rfs-block.h,
	libfs/src/rfs/rtems-rfs-block-pos.h,
	libfs/src/rfs/rtems-rfs-buffer-bdbuf.c,
	libfs/src/rfs/rtems-rfs-buffer.c,
	libfs/src/rfs/rtems-rfs-buffer-devio.c,
	libfs/src/rfs/rtems-rfs-buffer.h, libfs/src/rfs/rtems-rfs-data.h,
	libfs/src/rfs/rtems-rfs-dir.c, libfs/src/rfs/rtems-rfs-dir.h,
	libfs/src/rfs/rtems-rfs-dir-hash.c,
	libfs/src/rfs/rtems-rfs-dir-hash.h,
	libfs/src/rfs/rtems-rfs-file.c, libfs/src/rfs/rtems-rfs-file.h,
	libfs/src/rfs/rtems-rfs-file-system.c,
	libfs/src/rfs/rtems-rfs-file-system-fwd.h,
	libfs/src/rfs/rtems-rfs-file-system.h,
	libfs/src/rfs/rtems-rfs-format.c,
	libfs/src/rfs/rtems-rfs-format.h, libfs/src/rfs/rtems-rfs-group.c,
	libfs/src/rfs/rtems-rfs-group.h, libfs/src/rfs/rtems-rfs.h,
	libfs/src/rfs/rtems-rfs-inode.c, libfs/src/rfs/rtems-rfs-inode.h,
	libfs/src/rfs/rtems-rfs-link.c, libfs/src/rfs/rtems-rfs-link.h,
	libfs/src/rfs/rtems-rfs-mutex.c, libfs/src/rfs/rtems-rfs-mutex.h,
	libfs/src/rfs/rtems-rfs-rtems.c,
	libfs/src/rfs/rtems-rfs-rtems-dev.c,
	libfs/src/rfs/rtems-rfs-rtems-dir.c,
	libfs/src/rfs/rtems-rfs-rtems-file.c,
	libfs/src/rfs/rtems-rfs-rtems.h,
	libfs/src/rfs/rtems-rfs-rtems-utils.c,
	libfs/src/rfs/rtems-rfs-shell.c, libfs/src/rfs/rtems-rfs-shell.h,
	libfs/src/rfs/rtems-rfs-trace.c, libfs/src/rfs/rtems-rfs-trace.h:
	New.
