@@ -367,14 +367,14 @@ fat_init_volume_info(rtems_filesystem_mount_table_entry_t *mt_entry)
     if (rc == -1)
         return rc;
 
-    /* rtmes feature: no block devices, all are character devices */
-    if (!S_ISCHR(stat_buf.st_mode))
+    /* Must be a block device. */
+    if (!S_ISBLK(stat_buf.st_mode))
         rtems_set_errno_and_return_minus_one(ENOTTY);
 
     /* check that device is registred as block device and lock it */
     vol->dd = rtems_disk_obtain(stat_buf.st_rdev);
     if (vol->dd == NULL)
-        rtems_set_errno_and_return_minus_one(ENOTTY);
+        rtems_set_errno_and_return_minus_one(EIO);
 
     vol->dev = stat_buf.st_rdev;
 
