@@ -1,3 +1,9 @@
+2010-02-20	Chris Johns <chrisj@rtems.org>
+
+	* libfs/src/dosfs/fat.c, libfs/src/rfs/rtems-rfs-buffer.c: Block
+	devices are now block device nodes and not character device
+	nodes.
+
 2010-02-19	Chris Johns <chrisj@rtems.org>
 
 	* libblock/src/diskdevs.c: Create the devices as block devices.
